--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.4.2",
+    "@react-native-picker/picker": "^2.5.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-calendar-picker": "^7.1.4",
+    "react-native-date-picker": "^4.2.14",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-simple-toast": "^3.0.1",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
